--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
-@import url('http://fonts.cdnfonts.com/css/gotham-bold');
+@import url('http://fonts.cdnfonts.com/css/gotham');
 
 @import url('http://fonts.cdnfonts.com/css/myriad-pro');
 
 @import url("https://use.typekit.net/rwb6vdk.css");
+
+@import url('http://fonts.cdnfonts.com/css/arial-rounded-mt-bold');
 
 
 *{
@@ -27,7 +29,7 @@
     --subtitles-color: #6d6d6d;
     --dates-color: #7E7E7E;
     --open-sans: 'Open Sans', sans-serif;
-    --gotham: 'Gotham Bold', sans-serif;
+    --gotham: 'Gotham', sans-serif;
     --muli-regular: muli, sans-serif;
     --roboto: 'Roboto', sans-serif;
     --myriad: 'Myriad Pro', sans-serif;
@@ -68,6 +70,10 @@
     max-width: 70%;
 }
 
+button {
+    cursor: pointer;
+}
+
 
 .acessibility {
     height: 100%;
@@ -78,7 +84,7 @@
 }
 
 .links{
-    width: 35%;
+    width: 357px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -89,7 +95,7 @@
     font-family: var(--muli-regular);
     color: var(--links-color);
     font-size: 0.8em;
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 .access{
@@ -121,7 +127,7 @@
 }
 
 .logo-brasao {
-    width: 28%;
+    width: 30%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -147,9 +153,16 @@
     width: 50%;
 }
 
+.social_search_bar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    /* width: 300px */
+}
+
 .social_search span {
     font-family: var(--myriad);
-    font-weight: thin;
+    font-weight: 200;
     font-size: 0.9em;
     color: #585858;
 }
@@ -159,6 +172,40 @@
     height: 24%
 }
 
+.search_bar {
+    display: flex;
+    width: 180px;
+    height: 24px
+    
+}
+
+.search_bar input {
+    width: 140px;
+}
+
+.search_bar button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 30px;
+    border: none;
+    border-top: 0.5px solid #848484;
+    border-right:0.5px solid #848484;
+    border-bottom:0.5px solid #848484;
+    background-color: #1064C6;
+    border-radius: 0px 5px 5px 0px;
+}
+
+.search_bar button:hover {
+    background-color: var(--blue-two);
+    transition: 1s
+}
+
+.search_bar img {
+    width: 50%;
+    height: 60%;
+    }
 .nav_sections {
     background: var(--blue-two);
     width: 100vw;
@@ -252,6 +299,10 @@ h2{
     border-radius: 5px;
     margin: 20px 0 20px 0
 }
+.container_notices button:hover {
+    background-color: var(--blue-two);
+    transition: 1s
+}
 
 .container_services {
     display: flex;
@@ -265,7 +316,7 @@ h2{
 }
 
 .services button {
-    background: var(--btn-green);
+    background-color: #01662C;
     /* padding: 20px; */
     width: 235px;
     height: 62px;
@@ -291,6 +342,11 @@ h2{
     margin-left: 10%;
 }
 
+.services button:hover {
+    background: #00421C;
+    transition:1s
+}
+
 .turism {
     margin: 80px 0px 80px 0;
     text-align: center;
@@ -299,8 +355,8 @@ h2{
 .container_turism {
     display: flex;
     flexwrap: wrap;
-   
-    /* justify-container: space-between; */
+    width: 75%;
+    justify-content: space-between;
 }
 
 .turism_card {
@@ -310,7 +366,6 @@ h2{
     background-image: url('../assests/alimentar.png');
     background-size: cover;
     border-radius: 40px;
-    margin: 0 auto;
 }
 
 .image_diff1 {
@@ -327,7 +382,6 @@ h2{
     left: 15%;
     position: absolute;
     border: none;
-    /* background-color: #C86801; */
     font-family: var(--gotham);
     font-size: 1.1em;
     color: var(--text-white);
@@ -349,7 +403,6 @@ h2{
 
 .galery {
     text-align: center;
-    height: 500px
 }
 
 .container_galery img {
@@ -364,5 +417,223 @@ h2{
     justify-content: space-between;
 }
 
+.videos{
+    text-align: center;
+}
+
+.container_videos {
+    display: flex;
+    justify-content: space-between;
+}
+
+.video-div{
+    width: 32%;
+    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.video-div p {
+    font-family: var(--roboto); 
+    font-weight: 700;
+    font-size: 1em;
+    color: #575656;
+}
+
+.container_videos video {
+    width: 100%;
+}
+.info_images {
+    margin: 80px 0 80px 0;
+} 
+
+.container_info_imgs {
+    display: flex;
+    justify-content: space-between;
+}
+
+.container_info_imgs  img {
+    height: 20vh; 
+    width: 30%;
+    border-radius: 45px;
+    object-fit: center ;
+}
+
+footer {
+    width: 100vw;
+    height: 90vh;
+
+}
+
+.container_back {
+    background-image: url('../assests/bg-footer.png');
+    background-repeat: no-repeat;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+.container_footer {
+    display: flex;
+    /* justify-content: space-between; */
+    height: 84%;
+    /* align-items: flex-end; */
+    padding-top: 5%;
+    width: 75%;
+}
+
+.archives {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.box-archive {
+    display: flex;
+    justify-content: space-between;
+    width: 88%;
+}
+
+.box-archive img {
+    margin-top: 1%;
+    width: 33px;
+    height: 23px;
+} 
+
+h3 {
+    color: var(--text-white);
+    font-family: var(--gotham);
+    font-size: 2em;
+    margin-bottom: 35px;
+}
+
+.icon_text {
+    width: 85%;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    /* justify-content: space-between; */
+}
 
 
+hr {
+
+    height: 0.5px;
+    width: 95%;
+    margin: 8px 0px 8px 0px;
+    align-self: center;
+    color: var(--text-white);
+}
+
+.icon_text a {
+    text-decoration: none;
+    color: var(--text-white);
+    font-family: var(--gotham);
+    font-weight: 400;
+    font-size: 1em;
+    margin-left: 10px;
+    line-height: 25px;
+}
+
+.see_all {
+    border: none;
+    height: 35px;
+    width: 90px;
+    border-radius: 5px;
+    color: var(--text-white);
+    font-family: var(--gotham);
+    font-weight: 500;
+    align-self: flex-end;
+    background: #DCA701;
+    margin-right: 45px;
+    margin-top: 15px;
+}
+.footer_links {
+    background: #011655;
+    width: 100%;
+    height: 30%;
+}
+
+.container_footer_links {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo_footer {
+    display: flex;
+    align-items: center;
+    width: 35%;
+    height:  100%;
+}
+
+.logo_footer img {
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+}
+
+.logo_footer p {
+    font-family: var(--open-sans);
+    font-size: 0.9em;
+    font-weight: 500;
+    color: var(--text-white);
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    margin-left: 10%;
+}
+.logo_footer span {
+    font-family: var(--open-sans);
+    font-size: 1.58em;
+    font-weight: 900;
+    color: var(--text-white);
+}
+.f_links {
+    display: flex;
+    justify-content: space-between;
+    width: 35%;
+}
+
+.text_f_links {
+    display: flex;
+    flex-direction: column;
+    margin-top: 9%;
+}
+
+.text_f_links span {
+    font-family: var(--roboto);
+    font-size: 0.9em;
+    font-weight: 500;
+    color: var(--text-white);
+} 
+.text_f_links a {
+    text-decoration: none;
+    font-family: var(--roboto);
+    font-size: 0.8em;
+    font-weight: 400;
+    color: var(--text-white);
+    margin: 1px;
+} 
+
+.position {
+    margin-top: 14%;
+}
+
+
+.developed {
+    font-family: var(--roboto);
+    font-size: 0.9em;
+    font-weight: 400;
+    color: var(--text-white);
+}
+
+.by {
+    font-family: var(--roboto);
+    font-size: 1.4em;
+    color: var(--text-white);
+    font-family: 'Arial Rounded MT Bold', sans-serif;
+}
